 
[package]
name = "BetterThanMinecraft"
version = "0.3.2-alpha"
authors = ["Galaxtone", "Exopteron"]
edition = "2018"
description = "An experimental classicube server."
repository = "https://github.com/Exopteron/BetterThanMinecraft"
license = "GPL-3.0-or-later"

[dependencies]
# TODO Limit features in the future
tokio = { version = "1.10.1", features = ["full"] }
bytes = { version = "1.1.0", features = ["serde"] }
flate2 = "1.0"
serde = "1.0"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
base-62 = "0.1.1"
rand = "^0.6.0"
native-tls = "0.2.7"
num-integer = "0.1.4"
perlin_noise = "1.0.1"
named-binary-tag = "0.6.0"
log = "0.4.1"
env_logger = "0.9.0"
chrono = "0.4.1"
once_cell = "1.8.0"
toml = "0.5.8"
serde_derive = "1.0"
deflate = "0.9.1"
urlencoding = "2.1.0"
hex = "0.4.3"
md-5 = "0.9.1"
futures = "0.3.16"
tokio-read-line = "0.1.0"
num_cpus = "1.13.0"
async-compression = "0.3.8"
rlua = "0.17.0"
glob = "0.3.0"
rlua-async = "0.4.0"
async-tungstenite = { version = "0.12", features = ["tokio-runtime"] }
ws_stream_tungstenite = { version = "0.5.0", features = ["tokio"] }